--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body onload="init()">
     <div class="welcome">
         <div class="logo-wrapper to-hide">
-            <img src="img/HortaTech_logo.png" alt="">
+            <img src="img/hortatech_logo.png" alt="">
             <h1 class="title"><span>Horta</span><span>Tech</span></h1>
         </div>
         <svg class="to-hide" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path d="M201.4 342.6c12.5 12.5 32.8 12.5 45.3 0l160-160c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L224 274.7 86.6 137.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3l160 160z"/></svg>
